--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.606.0",
+    "@aws-sdk/client-sqs": "^3.606.0",
     "@types/aws-lambda": "^8.10.140",
     "@types/pg": "^8.11.6",
     "aws-cdk-lib": "2.131.0",
