--- a/frontend/healthcare-portal-server/package.json
+++ b/frontend/healthcare-portal-server/package.json
@@ -7,7 +7,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "aws-jwt-verify": "^4.0.1",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.17.2",
+    "express-session": "^1.18.0"
   },
   "keywords": [],
   "author": "",
