--- a/frontend/healthcare-portal-server/package.json
+++ b/frontend/healthcare-portal-server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "aws-jwt-verify": "^4.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-session": "^1.18.0"
   },
